# ServiceSensore_mqtt_ws

./: README.md
src/: CMakeLists.txt
src/src/: sensoriTHR.cpp
src/src/srv/: getTandH.srv
